FEAT(contacts): added contacts page with hardoced data
